--- a/app/views/layouts/_carrusel.html.erb
+++ b/app/views/layouts/_carrusel.html.erb
@@ -2,26 +2,32 @@
   <!-- Carousel items -->
   <div class="carousel-inner">
     <div class="active item">
-    	<%= image_tag('carousel/image-1.png') %>
+    	<%= image_tag('http://1.bp.blogspot.com/-j6cpnareDHM/TlxJBVf798I/AAAAAAAAM_4/zYlLLc5Ps0k/s1600/Luxury-Boats_Botes-y-Yates-de-Lujo_06.jpg', size: '800x450') %>
     	<div class="carousel-caption">    		
-    		<h1>Slip-ring Anchor 13lbs</h1>
-    		<p>Price: $18.95</p>
+    		<h3>Something about your company</h3>
+    		<p>placeholder for descriptive text</p>
     	</div>
     </div>
     <div class="item">
-    	<%= image_tag('carousel/image-2.png') %>
+    	<%= image_tag('http://2.bp.blogspot.com/-7MSHJEdcTiA/TlxKh7LzFYI/AAAAAAAANA0/K4eWm6Jz17Q/s1600/Luxury-Boats_Botes-y-Yates-de-Lujo_04.jpg', size: '800x450') %>
     	<div class="carousel-caption">    		
-    		<h1>Anchor Line 3/8" x 35' Braided</h1>
-    		<p>Price: $7.95</p>
+    		<h3>Some Random Text</h3>
+    		<p>placeholder for descriptive text</p>
     	</div>
     </div>
     <div class="item">
-    	<%= image_tag('carousel/image-4.png') %>
+    	<%= image_tag('http://4.bp.blogspot.com/-wPzXP8jTwMQ/TlxKed1RMSI/AAAAAAAANAw/C1YkYswllZw/s1600/Luxury-Boats_Botes-y-Yates-de-Lujo_03.JPG', size: '800x450') %>
     	<div class="carousel-caption">    		
-    		<h1>1400lb Winch With Strap</h1>
-    		<p>Price: $45.95</p>
+    		<h3>Raka INC. More Text here...</h3>
+    		<p>placeholder for descriptive text</p>
     	</div>
-
+    </div>
+    <div class="item">
+      <%= image_tag('http://1.bp.blogspot.com/-nc5-mEjXMyo/TlxJG7fgGKI/AAAAAAAAM_8/7NuId-zE0S4/s1600/Luxury-Boats_Botes-y-Yates-de-Lujo_07.jpg', size: '800x450') %>
+      <div class="carousel-caption">        
+        <h3>Raka INC. Some TEXT HERE!</h3>
+        <p>placeholder for descriptive text</p>
+      </div>
     </div>
   </div>
   <!-- Carousel nav -->
