--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,14 +10,14 @@
       </a>
  
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="#">Raka INC</a>
+      <%=link_to "RAKA INC", root_path, class: "brand" %>
  
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse in collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav pull-right" id="navegacion">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><%=link_to "Home", root_path %></li>
+          <li><%= link_to "About Us", about_path %></li>
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">My Account</a></li>
           <li><a href="#">View Cart/Checkout</a></li>
