--- a/app/views/layouts/_carrusel.html.erb
+++ b/app/views/layouts/_carrusel.html.erb
@@ -11,7 +11,7 @@
     <div class="item">
     	<%= image_tag('http://2.bp.blogspot.com/-7MSHJEdcTiA/TlxKh7LzFYI/AAAAAAAANA0/K4eWm6Jz17Q/s1600/Luxury-Boats_Botes-y-Yates-de-Lujo_04.jpg', size: '800x450') %>
     	<div class="carousel-caption">    		
-    		<h3>Some Random Text</h3>
+    		<h3>Insert  Random Text</h3>
     		<p>placeholder for descriptive text</p>
     	</div>
     </div>
