--- a/app/views/pagina/index.html.erb
+++ b/app/views/pagina/index.html.erb
@@ -1,14 +1,5 @@
 <div id="imagenes">
 	<div id="motrar_product">
-	<% @random.each do |f| %>
-		<div class="product">
-			<%= image_tag(f.imagen_url) %>
-			<h3><%= f.titulo %></h3>
-			<p><%= number_to_currency(f.precio, presicion:2) %></p>
-			<%= link_to product_path(f.id), class: "btn btn-info"  do %>
-				<b class="icon-search icon-white"></b>More Info.
-			<% end %>
-		</div>		
-	<% end %>
-</div>
+		<%= render @products %>
+	</div>
 </div>
