--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,10 +1,5 @@
-<div id="motrar_product">
-	<% @products.each do |f| %>
-		<div class="product">
-			<%= image_tag(f.imagen_url) %>
-			<h3><%= f.titulo %></h3>
-			<p>Price: <b> <%= number_to_currency(f.precio, presicion:2) %></b></p>
-			<%= link_to "More info.", product_path(f.id), class: "btn btn-info" %>
-		</div>		
-	<% end %>
+<div id="imagenes">
+	<div id="motrar_product">
+		<%= render @products %>
+	</div>
 </div>
