--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
 				<%= image_tag("imagen.jpg") %>
 			</section>
 		</div>
+		<footer class="footer page-footer">
+			<%= render 'layouts/footer' %>
+		</footer>
 	</div>
 </body>
 </html>
