--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -327,3 +327,21 @@ th.quantity{
 	margin: 40px 0 40px 40px;
 	padding: 10px;
 }
+.footer{
+	background-color: rgba(0, 0, 0, 0.85);
+	border-top: 1px solid $white;
+	padding: 70px;
+	margin: 20px 0 0 0;
+	list-style-type: none;
+	ul{
+		list-style-type: none;
+	}
+	li{
+		display: inline;
+	}
+	
+	a{
+		margin-left: 5px;
+		color: white;
+	}
+}
