--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -32,5 +32,5 @@
 		</tbody>
 	</table>
 	<% end %>
-	<%= link_to "Check Out!", new_order_path %>
+	<%= link_to "Check Out!", new_order_path, class: "btn btn-primary btn-success" %>
 </div>
