--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,10 @@
       <div class="nav-collapse in collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav pull-right" id="navegacion">
-          <li><%=link_to "Home", root_path %></li>
+          <li><%=link_to root_path do %>
+            <b class="icon-home icon-white"></b> Home
+          <% end %>
+          </li>
           <li><%= link_to "About Us", about_path %></li>          
           <% if user_signed_in? %>
             <li><%= link_to "Profile", edit_user_registration_path %></li>
