--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 
 @import "bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Chela+One|Anaheim);
 
 /* MIXINS IMPORTS */
 @mixin transiciones{
@@ -24,10 +25,17 @@ body{
 
 	/* PAGE HEADER */
 .page-header{
+	font-family: 'Chela One';	
 	padding: 60px 0 50px 0;
 	text-align: center;
 	background: url(back_header.jpg) no-repeat;
 	background-size:100% 200px;
+	h1{
+		font-size: 5em;
+		letter-spacing: 5px;
+		text-shadow: 0 4px 15px rgb(10,190,250);
+		color: rgb(60,120,140);
+	}
 }
 
 	/* SPAN 11 */
@@ -67,7 +75,7 @@ nav.span3{
 	.accordion-heading{
 		a{	
 			background-image: -webkit-linear-gradient(top, #5BC0DE, #2F96B4);
-			background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5BC0DE), to(#2F96B4));
+			background-image: -webkit-gradient(linear, 0 0, 0 100%, from($blue), to(#2F96B4));
 			border-radius: 5px;			
 			color: $white;
 			text-shadow: 0 1px $black;
@@ -78,12 +86,20 @@ nav.span3{
 	}
 	.accordion-heading:hover{	
 		a{
-			background-color: white;
+			background-color: rgba(180,210,250,.8);
 			background-image: none;
-			color: $blue;
+			color: $black;
 			text-shadow: 0 0 1px $black;
 			@include transiciones;			
 		}		
+	}
+	.accordion-inner ul{		
+		list-style-type: none;
+		margin: 5px;
+		li{
+			padding-left: 20px;
+			background: url(anchor-2.jpg) no-repeat 0px 0px; 
+		}
 	}
 }
 
@@ -111,7 +127,7 @@ nav.span3{
 		font-size: 1em;		
 		background-color: white;	
 		width: 250px;	
-		height: 340px;
+		height: 350px;
 		margin: 15px 15px 35px 15px;
 		word-wrap: break-word;
 		line-height: 10px;
@@ -119,11 +135,13 @@ nav.span3{
 		border-radius: 10px;
 		@include transiciones;
 		h3{
-			font-size: 1.2em;
+			font-family: 'Anaheim', sans-serif;
+			font-size: 1.6em;
 			color: $blue;
 			line-height: 20px;
 			border-bottom: 1px solid gray;
 			padding-bottom: 10px;
+			text-shadow: 0 1px black;
 			@include transiciones;
 		}		
 		img{			
@@ -330,18 +348,31 @@ th.quantity{
 .footer{
 	background-color: rgba(0, 0, 0, 0.85);
 	border-top: 1px solid $white;
-	padding: 70px;
+	padding: 20px 20px 20px 100px;
 	margin: 20px 0 0 0;
-	list-style-type: none;
+	list-style-type: none;	
 	ul{
 		list-style-type: none;
+		display: inline;
 	}
 	li{
 		display: inline;
+
 	}
 	
 	a{
-		margin-left: 5px;
+		
+		margin: 0px 15px 0 5px;
 		color: white;
+	}
+	#div_image{
+		margin-left: 10%;
+		margin-right: 10%;
+		display: inline-block;
+		background-image: url(anchor-1.jpg);
+		height: 300px;
+		width: 300px;
+		border-radius: 150px;
+		vertical-align: middle;
 	}
 }
