--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,10 @@
 
 	<ul>
 		<li><b class="icon-envelope icon-white"></b><%= link_to "Contact Us", contact_path %></li>
-		<li><%= link_to "Info", '#'%></li>
+		<li><%= link_to "Information", '#'%></li>
+	</ul>
+	<div id="div_image"></div>
+	<ul>
+		<li><b class="icon-user icon-white"></b><%= link_to "About Us", about_path %></li>
+		<li><%= link_to "Example link", '#'%></li>
 	</ul>
